Relsoved intro layout issue when minimize

--- a/styles/_intro.scss
+++ b/styles/_intro.scss
@@ -111,10 +111,13 @@
       float: left;
       width: 50%;
       text-align: center;
-      vertical-align: middle;
-      display: table-cell;
+      display: block;
       padding: 5%;
       padding-left: 8%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: auto;
+      position: relative;
 
         @include intro {
           display: inline-block;
@@ -127,8 +130,7 @@
         } 
   }
   .crossImg {
-      min-width: 55%;
-      @include proportions(47%, 47%);
+      @include proportions(500px, auto);
       border-radius: 1%;
       opacity: 0.8;
       box-shadow: 7px 7px 10px #005c99; 
