--- a/styles/main.css
+++ b/styles/main.css
@@ -138,10 +138,13 @@
   float: left;
   width: 50%;
   text-align: center;
-  vertical-align: middle;
-  display: table-cell;
+  display: block;
   padding: 5%;
   padding-left: 8%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  position: relative;
 }
 
 @media (max-width: 960px) {
@@ -157,9 +160,8 @@
 }
 
 .crossImg {
-  min-width: 55%;
-  height: 47%;
-  width: 47%;
+  height: 500px;
+  width: auto;
   border-radius: 1%;
   opacity: 0.8;
   -webkit-box-shadow: 7px 7px 10px #005c99;
